--- a/diamm/templates/website/set/set_detail.jinja2
+++ b/diamm/templates/website/set/set_detail.jinja2
@@ -21,7 +21,9 @@
                     <tr>
                         <th>Holding archives</th>
                         <td>
-                            {{ content.holding_archives|join("; ") }}
+                            {% for archive in content.holding_archives %}
+                            <a href="{{ archive.url }}">{{ archive.name }}{{ "; " if not loop.last else ""  }}</a>
+                            {% endfor %}
                         </td>
                     </tr>
                     {% if content.description %}
