--- a/diamm/templates/website/source/inventory-composition-order.jinja2
+++ b/diamm/templates/website/source/inventory-composition-order.jinja2
@@ -1,3 +1,5 @@
+{% from "website/macros.jinja2" import foliation, composers %}
+
 <div class="column">
     <p>Click an entry to see more information about that item.</p>
     <table class="table inventory-table">
@@ -9,7 +11,7 @@
         </tr>
         </thead>
         <tbody>
-        {% set show_imagelinks = content.manifest_url is defined %}
+        {% set show_imagelinks = content.manifest_url is defined and request.user.is_authenticated %}
         {% for entry in content.inventory|sort(attribute="composition") %}
         <tr class="alpha-order">
             <td class="item-details">
@@ -19,7 +21,7 @@
                 {{ composers(entry) }}
             </td>
             <td>
-                {{ foliation(entry, show_imagelinks) }}
+                {{ foliation(entry, show_imagelinks and entry.pages) }}
             </td>
         </tr>
         {% endfor %}
